@@ -6,7 +6,7 @@ import static org.junit.Assert.assertSame;
 import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.apache.commons.lang3.tuple.Pair;
 import org.junit.Before;
@@ -97,7 +97,7 @@ public final class MeanTest
                                                             .addStatistics( rightStatistic )
                                                             .build();
 
-        assertEquals( expected, actual.getData() );
+        assertEquals( expected, actual.getStatistic() );
     }
 
     @Test
@@ -105,12 +105,12 @@ public final class MeanTest
     {
         // Generate empty data
         Pool<Pair<Double, Double>> input =
-                Pool.of( Arrays.asList(), PoolMetadata.of() );
+                Pool.of( List.of(), PoolMetadata.of() );
 
         DoubleScoreStatisticOuter actual = this.mean.apply( input );
 
-        assertEquals( Double.NaN, actual.getComponent( MetricConstants.LEFT ).getData().getValue(), 0.0 );
-        assertEquals( Double.NaN, actual.getComponent( MetricConstants.RIGHT ).getData().getValue(), 0.0 );
+        assertEquals( Double.NaN, actual.getComponent( MetricConstants.LEFT ).getStatistic().getValue(), 0.0 );
+        assertEquals( Double.NaN, actual.getComponent( MetricConstants.RIGHT ).getStatistic().getValue(), 0.0 );
     }
 
     @Test
